--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,9 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
+    <main>
+      {{ content }}
+    </main>
 
   </body>
 
