More stuff, yeah

--- a/_sass/2_generic/_global.scss
+++ b/_sass/2_generic/_global.scss
@@ -5,8 +5,16 @@
 }
 
 html {
-	background-color: $paper;
+	// background-color: $paper;
 	// background-color: $shark;
+}
+
+.body--home {
+	background-color: $shark;
+}
+
+.body--default {
+	background-color: $paper;
 }
 
 img {
