--- a/css/willwallace.scss
+++ b/css/willwallace.scss
@@ -22,12 +22,12 @@
 // Objects
 @import "4_objects/icon";
 @import "4_objects/header";
-@import "4_objects/aspect-ratio";
 
 // Components
 @import "5_components/masthead";
 @import "5_components/hero";
 @import "5_components/tile";
+@import "5_components/tile-wall";
 @import "5_components/main";
 @import "5_components/post";
 
