--- a/_sass/5_components/_tile.scss
+++ b/_sass/5_components/_tile.scss
@@ -4,19 +4,43 @@
 // First, the container
 .tile-container {
 	@include unstyled;
-	display: flex;
-	flex-flow: row wrap;
+	background-color: transparent;
+	position: relative;
+
+	&:hover .tile {
+		-webkit-filter: grayscale(.8) brightness(.8);
+	}
+
+	@media only screen and (max-width: 840px) {
+		font-size: 14px;
+	}
 }
 
 // Now, the tile itself
 .tile {
 	background-color: $paper;
+	float: left;
 	min-height: $t*9;
 	text-decoration: inherit;
+	transition: transform .3s ease, box-shadow .3s ease, -webkit-filter .3s ease;
 	width: 33.333%;
+	z-index: 0;
+
+	.tile-container--home &:nth-child(1) {
+		margin-top: -$t*9;
+	}
 
 	&:hover {
+		// box-shadow: 10px 10px 5px rgba(0,0,0,0.1);
+		color: inherit;
+		// outline: .98px solid rgba(0,0,0,.25);
 		text-decoration: underline;
+		// transform: scale(1.01);
+		z-index: 9;
+
+		.tile-container & {
+			-webkit-filter: grayscale(0) brightness(1);
+		}
 	}
 
 	// Padding for tiles which only contain text
@@ -28,78 +52,21 @@
 	&--blank {
 		background-color: $shark;
 	}
-
-	// Contains two tiles next to each other
-	&--two {
-		overflow: hidden;
-		text-align: right;
-		width: 66.667%;
-
-		// Contents must be floated
-		.tile__inner,
-		.tile__image {
-			float: left;
-			width: 50%;
-		}
-
-		.tile__inner:after {
-			border-left-color: $paper !important;
-		}
-	}
-
-	// Occasionally tiles have a different background-colour
-	&--highlight {
-		background-color: $highlight;
-
-		&:hover {
-			color: $paper !important;
-		}
-
-		.tile__inner:after {
-			border-left-color: $highlight !important;
-		}
-	}
-
-	// Occasionally tile--two is reversed right-left
-	&--reverse {
-		text-align: left;
-
-		.tile__inner,
-		.tile__image {
-			float: right;
-		}
-
-		.tile__inner:before {
-			border-right-color: $paper !important;
-		}
-	}
 }
 
 // Contains text, sits inside a tile
 .tile__inner {
 	padding: 1em;
+	position: relative;
 
-	.tile--two & {
-		position: relative;
-
-		&:before,
-		&:after {
-			border: 1em solid transparent;
-			content: '';
-			height: 0;
-			position: absolute;
-			top: 1em;
-			width: 0;
-			z-index: 999;
-		}
-
-		&:before {
-			right: 100%;
-		}
-
-		&:after {
-			left: 100%;
-		}
+	&:before,
+	&:after {
+		border: 1em solid transparent;
+		content: '';
+		height: 0;
+		position: absolute;
+		top: 1em;
+		width: 0;
 	}
 }
 
@@ -111,14 +78,11 @@
 .tile__image {
 	opacity: 1;
 	transition: opacity .3s ease;
-
-	.tile:hover & {
-		opacity: 0.5;
-	}
 }
 
 // <h4>
-.tile__client {
+.tile__client,
+.tile__title {
 	margin-bottom: 0;
 }
 
