Add the About page, move Lynn & Chris to drafts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,9 @@
 	{% assign bodyclass="body--default" %}
 {% endif %}
 <body class="{{bodyclass}}">
-{% include masthead.html %}
+{% if bodyclass == "body--home" %}
+	{% include masthead.html %}
+{% endif %}
 <main class="main">{{ content }}</main>
 {% include foot.html %}
 </body>
