--- a/css/willwallace.scss
+++ b/css/willwallace.scss
@@ -29,6 +29,7 @@
 @import "5_components/masthead";
 @import "5_components/section";
 @import "5_components/post";
+@import "5_components/social";
 
 // Vendor (if necessary)
 @import "6_vendor/uglipop";
