Swap fitie polyfill for ofi

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 {% endif %}
 <main class="main">{{ content }}</main>
 {% include foot.html %}
+<script>loadJS('/js/ofi.js');loadJS('/js/willwallace.min.js')</script>
 <script src="/js/modernizr.js" async></script>
 </body>
 </html>
