Implement objectify polyfill for object-fit

--- a/_sass/5_components/_post.scss
+++ b/_sass/5_components/_post.scss
@@ -44,12 +44,12 @@
 	}
 
 	&--cover img {
-		@include object-fit(cover);
+		object-fit: cover;
 		width: 100%;
 	}
 
 	&--contain img {
-		@include object-fit(contain);
+		object-fit: contain;
 	}
 }
 
