--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 {% endif %}
 <main class="main">{{ content }}</main>
 {% include foot.html %}
-<script>loadJS('/js/ofi.js');loadJS('/js/willwallace.min.js')</script>
-<script src="/js/modernizr.js" async></script>
+<script>(function(w){var loadJS=function(src,cb){"use strict";var ref=w.document.getElementsByTagName("script")[0];var script=w.document.createElement("script");script.src=src;script.async=true;ref.parentNode.insertBefore(script,ref);if(cb && typeof(cb)==="function"){script.onload=cb;}return script;};if(typeof module!=="undefined"){module.exports=loadJS;}else{w.loadJS=loadJS;}}(typeof global!=="undefined"?global:this));</script>
+<script>loadJS('/js/willwallace.min.js')</script>
 </body>
 </html>
