--- a/_sass/5_components/_section.scss
+++ b/_sass/5_components/_section.scss
@@ -4,13 +4,16 @@
 	display: flex;
 	flex-flow: column nowrap;
 	overflow: hidden;
+	position: relative;
 
 	.body--home & {
+		border-bottom: .5em solid currentColor;
 		background-color: #fff;
 	}
 
-	@media only screen and (min-width: 20em) {
+	@media only screen and (min-width: 27em) {
 		.body--home & {
+			border: 0;
 			flex-flow: row nowrap;
 			min-height: 110vh;
 		}
@@ -31,7 +34,8 @@
 }
 
 .section__left {
-	color: $paper;
+	background-color: $shark;
+	background-color: currentColor;
 	display: flex;
 	flex-flow: column nowrap;
 	min-width: 10.5em;
@@ -40,22 +44,28 @@
 	z-index: 1;
 
 	.body--home & {
-		justify-content: center;
-		margin-right: -1em;
-		mix-blend-mode: multiply;
+		bottom: 0;
+		max-width: calc(100% - 1em);
+		position: absolute;
 	}
 
 	.body--home &,
 	.body--about & {
-		padding: 1em 2em 1em 1em;
+		padding: 1em 2em .5em 1em;
 	}
 
 	p {
 		margin-bottom: 0;
 	}
 
-	@media only screen and (min-width: 20em) {
+	@media only screen and (min-width: 27em) {
+		
 		.body--home & {
+			justify-content: center;
+			margin-right: -1em;
+			max-width: none;
+			mix-blend-mode: multiply;
+			position: static;
 			width: 50%;
 		}
 	}
@@ -66,6 +76,10 @@
 	}
 }
 
+.left__inner {
+	color: $paper;
+}
+
 .section__right {
 	position: relative;
 
@@ -74,7 +88,7 @@
 		padding: 2em;
 	}
 
-	@media only screen and (min-width: 20em) {
+	@media only screen and (min-width: 27em) {
 		min-height: 110vh;
 
 		.body--home & {
@@ -93,7 +107,7 @@
 	img {
 		display: block;
 
-		@media only screen and (min-width: 20em) {
+		@media only screen and (min-width: 27em) {
 			.body--home & {
 				height: 110vh;
 			}
