New Calibro case-study; change font-size on homepage; new screenshots for some case-studies

--- a/_layouts/case-study.html
+++ b/_layouts/case-study.html
@@ -28,7 +28,7 @@ bodyclass: body--case-study
 		%}
 		{{content}}
 		<hr>
-		<p class="end-mark"><span>{% include logo.svg %}</span> Can I help with your design or development work? <a href="{{site.baseurl}}/about">Get in touch</a>.</p>
+		<p class="end-mark"><span>{% include logo.svg %}</span> Want to find out more about my work? <a href="{{site.baseurl}}/about">Get in touch</a>.</p>
 		<div class="pagination">
 			{% if page.previous.url %}
 				<a class="pagination__link pagination__prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
